--- a/src/app/pages/admin/course-mamagement/course-mamagement.component.html
+++ b/src/app/pages/admin/course-mamagement/course-mamagement.component.html
@@ -6,16 +6,16 @@
 		<p>Here you can add, update and delete new course</p>
 
 		<section class="mt-5">
-			<a href="addCourse" class="btn btn-primary"> Add Course </a>
+			<a routerLink="/admin-layout/add-course" routerLinkActive="active" class="btn btn-primary"> Add Course </a>
 		</section>
 
-		<div th:if="${successMsg}" class="mb-3 alert alert-success"
+		<div *ngIf="successMsg" class="mb-3 alert alert-success"
 			role="alert">
-			<span th:text="${successMsg}"></span>
+			<span>{{successMsg}}</span>
 		</div>
 
-		<div th:if="${errorMsg}" class="mb-3 alert alert-danger" role="alert">
-			<span th:text="${errorMsg}"></span>
+		<div *ngIf="errorMsg" class="mb-3 alert alert-danger" role="alert">
+			<span>{{errorMsg}}</span>
 		</div>
 
 
@@ -32,84 +32,45 @@
 					</tr>
 				</thead>
 				<tbody>
-					<tr th:each="course : ${coursesPage.content}">
-						<td th:text="${course.name}"></td>
-						<td th:text="${course.discountedPrice}"></td>
-						<td><img th:src="@{${course.imageUrl}}" width="150"
+					<tr *ngFor="let course of courses">
+						<td >{{course.name}}</td>
+						<td >{{course.discountPrice}}</td>
+						<td><img src="{{'http://localhost:3000/uploads/' + course.image}}" width="150"
 							alt="Course Image" /></td>
-						<td><a th:href="@{/editCourse(courseName=${course.name})}"
+						<td><a [routerLink]="['/admin-layout/edit-course', course._id]" routerLinkActive="active"
 							class="btn btn-warning"> <i
 								class="bi bi-pencil-fill text-white"></i>
 						</a></td>
 						<td>
-							<button class="btn btn-danger" th:data-cname="${course.name}"
-								onclick="deleteCourse(this.getAttribute('data-cname'))">
+							<button class="btn btn-danger"
+								 (click)="course._id && onDelete(course._id)">
 								<i class="bi bi-trash-fill"></i>
 							</button>
 						</td>
 					</tr>
 				</tbody>
 			</table>
-			<nav aria-label="Page navigation">
-				<ul class="pagination">
-					<li class="page-item" th:classappend="${coursesPage.hasPrevious()} ? '' : 'disabled'">
-						<a class="page-link" th:href="@{/courseManagement(page=${coursesPage.number-1} ,size=${coursesPage.size})}">
-							<span aria-hidden="true">&laquo;</span>
-						</a>
-					</li>
+			<!-- Bootstrap Pagination -->
+  <nav *ngIf="totalPages().length > 1">
+    <ul class="pagination justify-content-center">
+      <li class="page-item" [class.disabled]="page === 1">
+        <a class="page-link" (click)="onPageChange(page - 1)">Previous</a>
+      </li>
 
-					<li class="page-item" th:each="i : ${#numbers.sequence(0, coursesPage.totalPages-1)}" th:classappend="${coursesPage.number==i} ? 'active' : ''">
-						<a class="page-link" th:href="@{/courseManagement(page=${i} ,size=${coursesPage.size})}" th:text="${i+1}"></a>
-					</li>
+      <li class="page-item" *ngFor="let p of totalPages()" [class.active]="p === page">
+        <a class="page-link" (click)="onPageChange(p)">{{ p }}</a>
+      </li>
 
-					<li class="page-item" th:classappend="${coursesPage.hasNext()} ? '' : 'disabled'">
-						<a class="page-link" th:href="@{/courseManagement(page=${coursesPage.number+1} ,size=${coursesPage.size})}">
-							<span aria-hidden="true">&raquo;</span>
-						</a>
-					</li>
-				</ul>
-			</nav>
+      <li class="page-item" [class.disabled]="page === totalPages().length">
+        <a class="page-link" (click)="onPageChange(page + 1)">Next</a>
+      </li>
+    </ul>
+  </nav>
 
 		</section>
 
 	</div>
 
-	<div class="modal" tabindex="-1" id="deleteModal">
-		<div class="modal-dialog">
-			<div class="modal-content">
-				<div class="modal-header">
-					<h5 class="modal-title">Delete Course</h5>
-					<button type="button" class="btn-close" data-bs-dismiss="modal"
-						aria-label="Close"></button>
-				</div>
-				<div class="modal-body">
-					<p>Are you sure you want to delete this course ?</p>
-				</div>
-				<div class="modal-footer">
-					<button type="button" class="btn btn-secondary"
-						data-bs-dismiss="modal">Cancel</button>
-					<button type="button" class="btn btn-primary" id="deleteCourseBtn">Delete</button>
-				</div>
-			</div>
-		</div>
-	</div>
 
 
-	<script>
-		var courseNameToDelete;
-		function deleteCourse(courseName) {
-			var deleteModalDiv = new bootstrap.Modal(document
-					.getElementById('deleteModal'));
-			deleteModalDiv.show();
-
-			courseNameToDelete = courseName;
-		}
-
-		document.getElementById('deleteCourseBtn').addEventListener(
-				'click',
-				function() {
-					window.location.href = '/deleteCourseDetails?courseName='
-							+ encodeURIComponent(courseNameToDelete);
-				});
-	</script>
 
