--- a/src/app/pages/admin/employee-management/employee-management.component.html
+++ b/src/app/pages/admin/employee-management/employee-management.component.html
@@ -3,16 +3,16 @@
   <p>Here you can add, update and delete new employee</p>
 
   <section class="mt-5">
-    <a href="addEmployee" class="btn btn-primary"> Add Employee </a>
+    <a routerLink="/admin-layout/add-employee" routerLinkActive="active" class="btn btn-primary"> Add Employee </a>
   </section>
 
-  <div th:if="${successMsg}" class="mb-3 alert alert-success"
+  <div *ngIf="successMsg" class="mb-3 alert alert-success"
     role="alert">
-    <span th:text="${successMsg}"></span>
+    <span>{{successMsg}}</span>
   </div>
 
-  <div th:if="${errorMsg}" class="mb-3 alert alert-danger" role="alert">
-    <span th:text="${errorMsg}"></span>
+  <div *ngIf="errorMsg" class="mb-3 alert alert-danger" role="alert">
+    <span>{{errorMsg}}</span>
   </div>
 
 
@@ -30,20 +30,21 @@
         </tr>
       </thead>
       <tbody>
-        <tr th:each="employee : ${employeePage}">
-          <td th:text="${employee.name}"></td>
-          <td th:text="${employee.email}"></td>
-          <td th:text="${employee.phoneno}"></td>
-          <td th:text="${employee.city}"></td>
+
+        <tr *ngFor="let emp of employee">
+          <td>{{emp.name}}</td>
+          <td>{{emp.email}}</td>
+          <td>{{emp.phoneno}}</td>
+          <td>{{emp.city}}</td>
 
           <td><a
-            th:href="@{/editEmployee(employeeName=${employee.name})}"
+            routerLink="/admin-layout/edit-employee/{{emp._id}}" routerLinkActive="active"
             class="btn btn-warning"> <i
               class="bi bi-pencil-fill text-white"></i>
           </a></td>
           <td>
-            <button class="btn btn-danger" th:data-cname="${employee.name}"
-              onclick="deleteEmployee(this.getAttribute('data-cname'))">
+            <button class="btn btn-danger"
+              (click)="onDelete(emp._id ?? '')">
               <i class="bi bi-trash-fill"></i>
             </button>
           </td>
@@ -52,67 +53,27 @@
       </tbody>
     </table>
 
-    <nav aria-label="Page navigation">
-      <ul class="pagination">
-        <li class="page-item" th:classappend="${employeePage.hasPrevious()} ? '' : 'disabled'">
-          <a class="page-link" th:href="@{/employeeManagement(page=${employeePage.number-1} ,size=${employeePage.size})}">
-            <span aria-hidden="true">&laquo;</span>
-          </a>
+    <nav *ngIf="totalPages().length > 1">
+      <ul class="pagination justify-content-center">
+        <li class="page-item" [class.disabled]="page === 1">
+          <a class="page-link" (click)="onPageChange(page - 1)">Previous</a>
         </li>
 
-        <li class="page-item" th:each="i : ${#numbers.sequence(0, employeePage.totalPages-1)}" th:classappend="${employeePage.number==i} ? 'active' : ''">
-          <a class="page-link" th:href="@{/employeeManagement(page=${i} ,size=${employeePage.size})}" th:text="${i+1}"></a>
+        <li class="page-item" *ngFor="let p of totalPages()" [class.active]="p === page">
+          <a class="page-link" (click)="onPageChange(p)">{{ p }}</a>
         </li>
 
-        <li class="page-item" th:classappend="${employeePage.hasNext()} ? '' : 'disabled'">
-          <a class="page-link" th:href="@{/employeeManagement(page=${employeePage.number+1} ,size=${employeePage.size})}">
-            <span aria-hidden="true">&raquo;</span>
-          </a>
+        <li class="page-item" [class.disabled]="page === totalPages().length">
+          <a class="page-link" (click)="onPageChange(page + 1)">Next</a>
         </li>
       </ul>
     </nav>
+
 
   </section>
 
 </div>
 
-<div class="modal" tabindex="-1" id="deleteModal">
-  <div class="modal-dialog">
-    <div class="modal-content">
-      <div class="modal-header">
-        <h5 class="modal-title">Delete Course</h5>
-        <button type="button" class="btn-close" data-bs-dismiss="modal"
-          aria-label="Close"></button>
-      </div>
-      <div class="modal-body">
-        <p>Are you sure you want to delete this Employee ?</p>
-      </div>
-      <div class="modal-footer">
-        <button type="button" class="btn btn-secondary"
-          data-bs-dismiss="modal">Cancel</button>
-        <button type="button" class="btn btn-primary"
-          id="deleteEmployeeBtn">Delete</button>
-      </div>
-    </div>
-  </div>
-</div>
 
-<script>
-  var employeeNameToDelete;
-  function deleteEmployee(employeeName) {
-    var deleteModalDiv = new bootstrap.Modal(document
-        .getElementById('deleteModal'));
-    deleteModalDiv.show();
 
-    employeeNameToDelete = employeeName;
-  }
 
-  document
-      .getElementById('deleteEmployeeBtn')
-      .addEventListener(
-          'click',
-          function() {
-            window.location.href = '/deleteEmployeeDetails?employeeName='
-                + encodeURIComponent(employeeNameToDelete);
-          });
-</script>
