--- a/src/app/pages/admin/admin-layout/admin-layout.component.html
+++ b/src/app/pages/admin/admin-layout/admin-layout.component.html
@@ -1,5 +1,4 @@
 <app-admin-nav-bar></app-admin-nav-bar>
-
-<div class="content">
+<div class="content container w-auto mx-auto">
    <router-outlet></router-outlet>
 </div>
