--- a/src/app/pages/admin/employee-management/employee-management.component.html
+++ b/src/app/pages/admin/employee-management/employee-management.component.html
@@ -38,7 +38,7 @@
           <td>{{emp.city}}</td>
 
           <td><a
-            routerLink="/admin-layout/edit-employee/{{emp._id}}" routerLinkActive="active"
+            routerLink="/admin-layout/edit-employee" routerLinkActive="active"
             class="btn btn-warning"> <i
               class="bi bi-pencil-fill text-white"></i>
           </a></td>
