--- a/src/app/pages/users/sell-course/sell-course.component.html
+++ b/src/app/pages/users/sell-course/sell-course.component.html
@@ -1,4 +1,4 @@
-<div class="content container w-75">
+<div class="content container w-auto" style="margin-left: 70px;">
   <h2>Sell Course</h2>
   <p>Provide proper details to sell course</p>
 
