--- a/src/app/pages/admin/customer-management/customer-management.component.html
+++ b/src/app/pages/admin/customer-management/customer-management.component.html
@@ -1,4 +1,4 @@
-<div class="content  container w-75">
+<div class="content  container w-auto">
   <h2>Customer Management</h2>
   <p>Here you can View, update and delete customer</p>
 
@@ -6,22 +6,22 @@
     <h3 class="text-center">View All Customers</h3>
   </section>
 
-  <div th:if="${successMsg}" class="mb-3 alert alert-success"
+  <div *ngIf="successMsg" class="mb-3 alert alert-success"
     role="alert">
-    <span th:text="${successMsg}"></span>
+    <span>{{successMsg}}</span>
   </div>
 
-  <div th:if="${errorMsg}" class="mb-3 alert alert-danger" role="alert">
-    <span th:text="${errorMsg}"></span>
+  <div *ngIf="errorMsg"  class="mb-3 alert alert-danger" role="alert">
+    <span>{{errorMsg}}</span>
   </div>
 
 
   <section class="mt-5">
-  <div th:if="${#lists.isEmpty(userPage.content)}">
+  <div *ngIf="UserFound">
               <div class="alert alert-warning" role="alert">
                   No customers found
               </div>
-          </div>
+  </div>
   <div th:if="${!#lists.isEmpty(userPage.content)}">
     <table class="table table-striped table-hover table-bordered shadow ">
       <thead>
@@ -37,49 +37,46 @@
         </tr>
       </thead>
       <tbody>
-        <tr th:each="user : ${userPage.content}">
-          <td th:text="${user.name}"></td>
-          <td th:text="${user.email}"></td>
-          <td th:text="${user.phoneno}"></td>
-          <td th:text="${user.city}"></td>
-                      <td th:text="${user.banStatus}"></td>
+        <tr *ngFor="let user of users">
+          <td>{{user.name}}</td>
+          <td>{{user.email}}</td>
+          <td>{{user.phoneno}}</td>
+          <td>{{user.city}}</td>
+          <td>{{user.ban_status}}</td>
 
-          <td> <a th:href="@{/userCoursesDetails(userEmail=${user.email}, userName=${user.name})}"
+          <td> <a [routerLink]="['/admin-layout/user-courseDetails']"
+            [queryParams]="{ email: user.email, name: user.name }" routerLinkActive="active"
               class="btn btn-primary">
               <i class="bi bi-plus-circle"></i>
               </a>
           </td>
           <td>
-            <button class="btn btn-danger" th:data-uemail="${user.email}" onclick="banUser(this.getAttribute('data-uemail'))">
-                                 <i class="bi bi-x-circle"></i>
-                          </button>
+            <button class="btn btn-danger"(click)="banUser(user._id)" >
+              <i class="bi bi-x-circle"></i>
+            </button>
           </td>
           <td>
-            <button class="btn btn-success" th:data-uemail="${user.email}" onclick="unBanUser(this.getAttribute('data-uemail'))">
-                               <i class="bi bi-check-circle"></i>
-                          </button>
+            <button class="btn btn-success" (click)="unbanUser(user._id)" >
+               <i class="bi bi-check-circle"></i>
+             </button>
           </td>
 
         </tr>
       </tbody>
     </table>
 
-    <nav aria-label="Page navigation">
-      <ul class="pagination">
-        <li class="page-item" th:classappend="${userPage.hasPrevious()} ? '' : 'disabled'">
-          <a class="page-link" th:href="@{/customerManagement(page=${userPage.number-1} ,size=${userPage.size})}">
-            <span aria-hidden="true">&laquo;</span>
-          </a>
+    <nav *ngIf="totalPages().length > 1">
+      <ul class="pagination justify-content-center">
+        <li class="page-item" [class.disabled]="page === 1">
+          <a class="page-link" (click)="onPageChange(page - 1)">Previous</a>
         </li>
 
-        <li class="page-item" th:each="i : ${#numbers.sequence(0, userPage.totalPages-1)}" th:classappend="${userPage.number==i} ? 'active' : ''">
-          <a class="page-link" th:href="@{/customerManagement(page=${i} ,size=${userPage.size})}" th:text="${i+1}"></a>
+        <li class="page-item" *ngFor="let p of totalPages()" [class.active]="p === page">
+          <a class="page-link" (click)="onPageChange(p)">{{ p }}</a>
         </li>
 
-        <li class="page-item" th:classappend="${userPage.hasNext()} ? '' : 'disabled'">
-          <a class="page-link" th:href="@{/customerManagement(page=${userPage.number+1} ,size=${userPage.size})}">
-            <span aria-hidden="true">&raquo;</span>
-          </a>
+        <li class="page-item" [class.disabled]="page === totalPages().length">
+          <a class="page-link" (click)="onPageChange(page + 1)">Next</a>
         </li>
       </ul>
     </nav>
@@ -88,70 +85,8 @@
 
 </div>
 
-<div class="modal" tabindex="-1" id="banUserModal">
-  <div class="modal-dialog">
-    <div class="modal-content">
-      <div class="modal-header">
-        <h5 class="modal-title">Ban User</h5>
-        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-      </div>
-      <div class="modal-body">
-        <p>Are you sure you want to ban this user ?</p>
-      </div>
-      <div class="modal-footer">
-        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
-        <button type="button" class="btn btn-primary" id="banUserBtn">Ban</button>
-      </div>
-    </div>
-  </div>
-</div>
 
-<div class="modal" tabindex="-1" id="unBanUserModal">
-  <div class="modal-dialog">
-    <div class="modal-content">
-      <div class="modal-header">
-        <h5 class="modal-title">Unban User</h5>
-        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-      </div>
-      <div class="modal-body">
-        <p>Are you sure you want to unban this user ?</p>
-      </div>
-      <div class="modal-footer">
-        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
-        <button type="button" class="btn btn-primary" id="unBanUserBtn">Unban</button>
-      </div>
-    </div>
-  </div>
-</div>
 
-<script>
-function banUser(userEmail)
-{
-  var userEmailToBan;
-  var banStatus = true;
 
-  var banUserModalDiv = new bootstrap.Modal(document.getElementById('banUserModal'));
-  banUserModalDiv.show();
 
-  userEmailToBan = userEmail;
 
-  document.getElementById('banUserBtn').addEventListener('click', function() {
-      window.location.href = '/banUserDetails?userEmail=' + encodeURIComponent(userEmailToBan) + '&banStatus=' + encodeURIComponent(banStatus);
-  });
-}
-function unBanUser(userEmail)
-{
-  var userEmailToBan;
-  var banStatus = false;
-
-  var unBanUserModalDiv = new bootstrap.Modal(document.getElementById('unBanUserModal'));
-  unBanUserModalDiv.show();
-
-  userEmailToBan = userEmail;
-
-  document.getElementById('unBanUserBtn').addEventListener('click', function() {
-      window.location.href = '/banUserDetails?userEmail=' + encodeURIComponent(userEmailToBan) + '&banStatus=' + encodeURIComponent(banStatus);
-  });
-}
-
-</script>
