--- a/src/app/pages/admin/dashboard/dashboard.component.html
+++ b/src/app/pages/admin/dashboard/dashboard.component.html
@@ -1,14 +1,12 @@
-<div class="content container " style="width: 80%;">
+<div class="content container w-auto" style="width: 80%;">
   <h2>Admin Dashboard</h2>
-  <p>Dashboard contains the different graphs and charts showing the
-    different details</p>
+  <p>Dashboard contains the different graphs and charts showing the different details</p>
 
   <section class="py-5">
     <div class="row justify-content-center">
-
       <div class="col-lg-5">
         <div class="card shadow p-3">
-          <h4 class="text-center">Todays Sale Graph</h4>
+          <h4 class="text-center">Today's Sale Graph</h4>
           <div id="myPlot"></div>
         </div>
       </div>
@@ -19,116 +17,17 @@
           <canvas id="myPieChart"></canvas>
         </div>
       </div>
-
     </div>
   </section>
 
   <section class="container py-5">
     <div class="row justify-content-center">
-
       <div class="col-lg-8">
         <div class="card shadow p-3">
           <h4 class="text-center">Courses Sold Per Day Graph</h4>
           <canvas class="mt-3" id="myChart"></canvas>
         </div>
       </div>
-
     </div>
   </section>
-
 </div>
-
-
-<script
-  src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-  integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
-  crossorigin="anonymous"></script>
-
-<script th:inline="javascript">
-function graphOne()
-{
-  const xArray = /*[[ ${date11} ]]*/ [];
-  const yArray = /*[[ ${totalAmount11} ]]*/ [];
-
-  const data = [{
-    x:xArray,
-    y:yArray,
-    type:"bar"
-  }];
-
-  const layout = {
-            displayModeBar: false
-          };
-
-  Plotly.newPlot("myPlot", data, layout, {displayModeBar: false});
-}
-graphOne();
-
-
-function graphTwo()
-{
-  const xValues = /*[[${subName}]]*/ [];
-  const yValues = /*[[${totalCourse}]]*/ [];
-
-  function getRandomColor() {
-       const letters = '0123456789ABCDEF';  // Hexadecimal characters for color codes
-       let color = '#';
-       for (let i = 0; i < 6; i++) {
-           color += letters[Math.floor(Math.random() * 16)];  // Randomly pick one character from letters
-       }
-       return color;
-    }
-
-
-  var barColors = xValues.map(() => getRandomColor());
-
-  new Chart("myPieChart", {
-    type: "pie",
-    data: {
-      labels: xValues,
-      datasets: [{
-        backgroundColor: barColors,
-        data: yValues
-      }]
-    },
-    options: {
-      title: {
-        display: true,
-
-      }
-    }
-  });
-}
-graphTwo();
-
-function graphThree()
-{
-  const xValues = /*[[${date1}]]*/ [];
-  const yValues = /*[[${total1}]]*/ [];
-
-  var maxYValues= Math.max(...yValues)+2;
-
-  new Chart("myChart", {
-    type: "line",
-    data: {
-      labels: xValues,
-      datasets: [{
-        fill: false,
-        lineTension: 0,
-        backgroundColor: "rgba(0,0,255,1.0)",
-        borderColor: "rgba(0,0,255,0.1)",
-        data: yValues
-      }]
-    },
-    options: {
-      legend: {display: false},
-      scales: {
-        yAxes: [{ticks: {min: 0, max:maxYValues}}],
-      }
-    }
-  });
-}
-
-graphThree();
-</script>
-  
