--- a/src/app/pages/users/login/login.component.html
+++ b/src/app/pages/users/login/login.component.html
@@ -1,1 +1,48 @@
-<p>login works!</p>
+
+  <div class="login-card">
+    <h3 class="text-center mb-4">Login</h3>
+    <form>
+      <div class="mb-3">
+        <label for="email" class="form-label">Email address</label>
+        <input
+          type="email"
+          class="form-control"
+          [(ngModel)]="login.email"
+          name="email"
+          id="email"
+          placeholder="Enter email"
+          required
+        />
+      </div>
+
+      <div class="mb-3">
+        <label for="password" class="form-label">Password</label>
+        <input
+          type="password"
+          name="password"
+          [(ngModel)]="login.password"
+          class="form-control"
+          id="password"
+          placeholder="Password"
+          required
+        />
+      </div>
+
+      <div class="mb-3 form-check">
+        <input type="checkbox" class="form-check-input" id="remember" />
+        <label class="form-check-label" for="remember">Remember me</label>
+      </div>
+
+      <div class="d-grid">
+        <button type="submit" class="btn btn-primary" (click)="onLogin()">Login</button>
+      </div>
+
+      <p class="mt-3 text-center">
+        Don't have an account?
+        <a href="#">Register here</a>
+      </p>
+    </form>
+  </div>
+
+
+
