--- a/src/app/pages/users/my-profile/my-profile.component.html
+++ b/src/app/pages/users/my-profile/my-profile.component.html
@@ -1,61 +1,41 @@
-<!-- header starts -->
-<div th:if="${sessionUser == null OR sessionUser == ''}">
-  <div th:replace="~{fragments/header :: crm-header}"></div>
-</div>
-<div th:unless="${sessionUser == null OR sessionUser == ''}">
-  <div th:replace="~{fragments/user-header :: u-header}"></div>
-</div>
-
-
-<!-- header ends -->
-
-<!-- main content starts -->
-<main class="container-fluid" style="min-height: 550px;">
-    <!-- content -->
-    <section class="container py-5">
-        <div class="row">
-            <div class="col-lg-4">
-                <div class="card shadow" style="width: 18rem;">
-                    <div class="card-body">
-                        <div class="text-center">
-                            <i class="bi bi-person-circle" style="font-size: 8rem;"></i>
-                            <h3 th:text="${sessionUser.name}"></h3>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="col-lg-8">
-                <div class="card shadow">
-                    <div class="card-body">
-                        <div class="text-center">
-                            <h4 class="mb-4"> User Details </h4>
-
-                            <table class="table table-striped table-hover table-bordered">
-                                <tbody>
-                                    <tr>
-                                        <td>Name</td>
-                                        <td th:text="${sessionUser.name}"></td>
-                                    </tr>
-                                    <tr>
-                                        <td>Email</td>
-                                        <td th:text="${sessionUser.email}"></td>
-                                    </tr>
-                                    <tr>
-                                        <td>Phone No.</td>
-                                        <td th:text="${sessionUser.phoneno}"></td>
-                                    </tr>
-                                    <tr>
-                                        <td>City</td>
-                                        <td th:text="${sessionUser.city}"></td>
-                                    </tr>
-                                </tbody>
-                            </table>
-                        </div>
-                    </div>
-                </div>
-            </div>
+<main class="flex-grow-1 ms-100" style="margin-left: 100px; margin-top: 50px; padding: 2rem;">
+  <div class="container w-auto">
+    <div class="row gy-4">
+      <div class="col-lg-4">
+        <div class="card shadow text-center">
+          <div class="card-body">
+            <i class="bi bi-person-circle" style="font-size: 8rem;"></i>
+            <h3>{{ name }}</h3>
+          </div>
         </div>
-    </section>
-
-
+      </div>
+      <div class="col-lg-8">
+        <div class="card shadow">
+          <div class="card-body">
+            <h4 class="mb-4 text-center">User Details</h4>
+            <table class="table table-striped table-hover table-bordered">
+              <tbody>
+                <tr>
+                  <td><strong>Name</strong></td>
+                  <td>{{ name }}</td>
+                </tr>
+                <tr>
+                  <td><strong>Email</strong></td>
+                  <td>{{ email }}</td>
+                </tr>
+                <tr>
+                  <td><strong>Phone No.</strong></td>
+                  <td>{{ phoneno }}</td>
+                </tr>
+                <tr>
+                  <td><strong>City</strong></td>
+                  <td>{{ city }}</td>
+                </tr>
+              </tbody>
+            </table>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
 </main>
