--- a/src/app/pages/users/user-layout/user-layout.component.html
+++ b/src/app/pages/users/user-layout/user-layout.component.html
@@ -1,4 +1,4 @@
 <app-employee-navbar></app-employee-navbar>
-<div class="content">
+<div class="content container w-auto">
   <router-outlet></router-outlet>
 </div>
