--- a/src/app/pages/users/add-inquiry/add-inquiry.component.html
+++ b/src/app/pages/users/add-inquiry/add-inquiry.component.html
@@ -1,4 +1,4 @@
-<div class="content container w-auto">
+<div class="content container w-auto" style="margin-left: 60px;">
   <h2> Add Inquiry </h2>
   <p> Provide proper details to sell course </p>
 
