--- a/src/app/component/admin/admin-nav-bar/admin-nav-bar.component.html
+++ b/src/app/component/admin/admin-nav-bar/admin-nav-bar.component.html
@@ -26,15 +26,13 @@
                 <i class="bi bi-chat-dots-fill"></i>
                 <span class="ms-2"> Feedback </span>
             </a>
-            <a routerLink="/admin-layout/dashboard"  href="#" class="nav-link">
+            <a (click)="logout()"  href="#" class="nav-link">
                 <i class="bi bi-box-arrow-in-right"></i>
                 <span class="ms-2"> Logout </span>
             </a>
-
         </nav>
-
     </div>
 
-  
+
 
 
