--- a/src/app/pages/admin/feedback/feedback.component.html
+++ b/src/app/pages/admin/feedback/feedback.component.html
@@ -42,20 +42,18 @@
         </tbody>
       </table>
 
-      <nav aria-label="Page navigation">
-        <ul class="pagination">
-          <li class="page-item" [class.disabled]="!pagination.hasPrevious">
-            <a class="page-link" (click)="changePage(currentPage - 1)">&laquo;</a>
+      <nav *ngIf="totalPages().length > 1">
+        <ul class="pagination justify-content-center">
+          <li class="page-item" [class.disabled]="page === 1">
+            <a class="page-link" (click)="onPageChange(page - 1)">Previous</a>
           </li>
-          <li
-            class="page-item"
-            *ngFor="let page of totalPageArray"
-            [class.active]="page === currentPage"
-          >
-            <a class="page-link" (click)="changePage(page)">{{ page + 1 }}</a>
+
+          <li class="page-item" *ngFor="let p of totalPages()" [class.active]="p === page">
+            <a class="page-link" (click)="onPageChange(p)">{{ p }}</a>
           </li>
-          <li class="page-item" [class.disabled]="!pagination.hasNext">
-            <a class="page-link" (click)="changePage(currentPage + 1)">&raquo;</a>
+
+          <li class="page-item" [class.disabled]="page === totalPages().length">
+            <a class="page-link" (click)="onPageChange(page + 1)">Next</a>
           </li>
         </ul>
       </nav>
