--- a/src/app/pages/home/customer-login/customer-login.component.html
+++ b/src/app/pages/home/customer-login/customer-login.component.html
@@ -3,10 +3,10 @@
     <h3 class="text-center mb-2 fw-bold">Login</h3>
     <p class="text-center text-muted mb-4">Sign in to your account</p>
     <form>
-      <div *ngIf="errorMsg" class="mb-3 alert alert-danger"
-    role="alert">
-    <span>{{errorMsg}}</span>
-  </div>
+      <div *ngIf="errorMessage" class="mb-3 alert alert-danger"
+          role="alert">
+       <span>{{errorMessage}}</span>
+       </div>
       <div class="mb-3">
         <label for="email" class="form-label">Email address</label>
         <input
@@ -40,11 +40,12 @@
       </div>
       <p class="mt-3 text-center">
         Don't have an account?
-        <a href="#" class="text-primary fw-semibold">Register here</a>
+        <a routerLink="/customerRegistration" routerLinkActive="active" class="text-primary fw-semibold">Register here</a>
       </p>
     </form>
   </div>
 </div>
+
 
 
 
