--- a/src/app/pages/users/follow-ups/follow-ups.component.html
+++ b/src/app/pages/users/follow-ups/follow-ups.component.html
@@ -31,7 +31,7 @@
   <section class="mt-5" *ngIf="showInquirySection">
     <div class="card shadow p-5">
       <h4 class="text-center text-primary">Discussion Details</h4>
-      <h5 class="mt-4">Customer Name: {{ customerName }}</h5>
+      <h5 class="mt-4">Customer Name: {{ formData.name}}</h5>
 
       <table class="table table-striped table-hover table-bordered shadow">
         <thead>
